simple flow to estimate your max house price based on down payment cash and annual income

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,1 +1,4 @@
-%h1 Morty
+= form_tag '/estimate' do
+  = text_field_tag 'annualincome'
+  = text_field_tag 'downpayment'
+  = submit_tag 'Estimate!'
