--- a/app/views/home/estimate.html.haml
+++ b/app/views/home/estimate.html.haml
@@ -1,1 +1,9 @@
-= @price
+- if @price
+  .alert.alert-success
+    You can afford at most a
+    = number_to_currency @price, precision: 0
+    house
+- else
+  .alert.alert-danger
+    =console
+    Sorry, we couldn't generate the estimate. Please try again later.
