make the message a little more positive

--- a/app/views/home/estimate.html.haml
+++ b/app/views/home/estimate.html.haml
@@ -1,6 +1,6 @@
 - if @price
   .alert.alert-success
-    You can afford at most a
+    Nice, you can afford a
     = number_to_currency @price, precision: 0
     house
 - else
